--- a/cv.html
+++ b/cv.html
@@ -1,42 +1,52 @@
+
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>shiraCV</title>
-    <link rel="stylesheet" href="./assets/css/common.css">
-  </head>
+<title>Helios by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="header" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
+		<div id="page-wrapper">
+   	<nav id="nav">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="swnwb1.html">Swnwb1</a>
+								<li><a href="Swnwb2.html">Swnwb2</a></li>
+								<li><a href="cv.html">CV</a></li>
+								<li><a href="pets.html">Pets</a></li>
+							</ul>
+						</nav>
 
-  <body class='cv_page'>
-    <div id='wapper'>
-      <header>
-        <nav id='main_nav'>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./swnwb1.html">SwNwBasis:1</a></li>
-            <li><a href="./swnwb2.html">SwNwBasis:2</a></li>
-            <li><span>CV<span></li>
-          </ul>
-        </nav>
-        <hr>
-      </header>
+          </div>
+          <section id="banner">
+            <header>
+              <h2>はじめまして <strong>シンです</strong>.</h2>
 
+            </header>
+          </section>
+            </section>
+				</div>
       <main>
+        <p> </p>
+        <p> </p>
+        <p> </p>
         <h1>自己紹介</h1>
-        <p><img src="./assets/images/WechatIMG151.jpeg" width="20%"/></p>
-        <p>私は鄧真と申します。</p>
-        <p>
+        <center><img src="./assets/images/WechatIMG151.jpeg" width="20%"/></center>
+        <center>私は鄧真と申します。</center>
+        <center>
         <br>中国人です。私と母さんは動物が大好きです、実家のペートは多いです。
-        <br>犬が２匹、玄鳳インコ夫婦と子供４羽、ヨウム1羽、ハッカチョウ2羽（庭に見つけた）,大雨後うちの犬見つけたの幼い雀と猫。。。(Ｔ▽Ｔ)10匹。
-        <div style=background-color:red>（猫は全部母救助の野良猫です。）</div>と魚１匹があります。
-            母は今仕事がないので、毎日小動物世話のことは非常に忙しいです。
-        <br>私今留学中ですが、母さんと電話するたびに、『もう小動物を拾わないよ！』と母さんに伝えます。
+
+        <center>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/7Ao3uA6gnfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <center>KUAD クロステックデザインコース 2019</center>
       </footer>
     </div>
   </body>
