--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
+
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>shiraSP2index</title>
-    <link rel="stylesheet" href="./assets/css/common.css">
-  </head>
+<title>Shinnの学習進捗ページ by:DENG ZHEN</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
+		<div id="page-wrapper">
 
-  <body class='index_page'>
-    <div id='wapper'>
-      <header>
-        <nav id='main_nav'>
-          <ul>
-            <li><span>Home<span></li>
-            <li><a href="./swnwb1.html">SwNwBasis:1</a></li>
-            <li><a href="./swnwb2.html">SwNwBasis:2</a></li>
-            <li><a href="./cv.html">CV</a></li>
-          </ul>
-        </nav>
-        <hr>
-      </header>
+			<!-- Header -->
+				<div id="header">
 
+					<!-- Inner -->
+						<div class="inner">
+							<header>
+								<h1><a href="index.html" id="logo">Hello(^~^)/</a></h1>
+								<hr />
+								<p>Shinnの学習進捗ページ by:DENG ZHEN</p>
+							</header>
+							<footer>
+								<a href="#banner" class="button circled scrolly">Start</a>
+							</footer>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="swnwb1.html">Swnwb1</a>
+								<li><a href="Swnwb2.html">Swnwb2</a></li>
+								<li><a href="cv.html">CV</a></li>
+								<li><a href="pets.html">Pets</a></li>
+							</ul>
+						</nav>
+
+				</div>
+				<section id="banner">
+					<header>
+						<h2>ソフトウェアネットワーク演習Ⅰ <strong>スダート</strong>.</h2>
+
+					</header>
+				</section>
 
       <main>
-        <h1>Shinnの学習進捗ページ</h1>
-        <img src="./assets/images/WechatIMG158.jpeg" width="20%"/>
-        <h2>履修科目</h2>
+        <center><img src="./assets/images/WechatIMG158.jpeg" width="20%"/><center>
+        <center><h2>履修科目</h2><center>
         <div class="period">
           <h3>前期</h3>
           <ol>
@@ -44,7 +67,7 @@
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <center>KUAD クロステックデザインコース 2019<center>
       </footer>
 
     </div>
