--- a/swnwb1.html
+++ b/swnwb1.html
@@ -2,25 +2,30 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>shira_swnwb1</title>
-    <link rel="stylesheet" href="../assets/css/common.css">
-  </head>
+<title>Helios by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="header" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
+		<div id="page-wrapper">
+   	<nav id="nav">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="swnwb1.html">Swnwb1</a>
+								<li><a href="Swnwb2.html">Swnwb2</a></li>
+								<li><a href="cv.html">CV</a></li>
+								<li><a href="pets.html">Pets</a></li>
+							</ul>
+						</nav>
 
-  <body class='subject_page'>
-    <div id='wrapper'>
-      <header>
-        <nav id='main_nav'>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><span>SwNwBasis:1</span></li>
-            <li><a href="./swnwb2.html">SwNwBasis:2</a></li>
-            <li><a href="./cv.html">CV</a></li>
-          </ul>
-        </nav>
-        <hr>
-      </header>
+				</div>
+
+        <p> </p>
+        <p> </p>
+        <p> </p>
 
       <main>
         <h1>ソフトウェアネットワーク演習2</h1>
