--- a/swnwb2.html
+++ b/swnwb2.html
@@ -1,24 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>ソフトウェア・ネットウーク演習２</title>
-    <link rel="stylesheet" href="../assets/css/common.css">
-  </head>
 
-  <body class="subject_page">
-    <div id="wrapper">
-      <header>
-        <nav id="main_nav">
-          <ul>
-            <li><a href="./index.html">home</a></li>
-            <li><a href="./swnwb1.html">SwNwBasis:1</a></li>
-            <li><span>SwNwBasis:2<span></li>
-            <li><a href="./cv.html">CV</a></li>
-          </ul>
-        </nav>
-        <hr>
+<title>Helios by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="header" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
+		<div id="page-wrapper">
+   	<nav id="nav">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="swnwb1.html">Swnwb1</a>
+								<li><a href="Swnwb2.html">Swnwb2</a></li>
+								<li><a href="cv.html">CV</a></li>
+								<li><a href="pets.html">Pets</a></li>
+							</ul>
+						</nav>
+
+				</div>
       </header>
+      <p> </p>
+      <p> </p>
+      <p> </p>
 
       <main>
         <h1>ソフトウェアウーク演習２</h1>
