--- a/swnwb2.html
+++ b/swnwb2.html
@@ -15,7 +15,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="swnwb1.html">Swnwb1</a>
-								<li><a href="Swnwb2.html">Swnwb2</a></li>
+								<li><a href="swnwb2.html">Swnwb2</a></li>
 								<li><a href="cv.html">CV</a></li>
 								<li><a href="pets.html">Pets</a></li>
 							</ul>
