--- a/swnwb2.html
+++ b/swnwb2.html
@@ -33,7 +33,7 @@
         <div class="session">
           <h2>session</h2>
           <h3>課題１</h3>
-          <p>abjjsdhusdhushdfushf  shah  !!</p>
+          <p>オウカンリン１</p>
         </div>
 
           <div class="session">
@@ -49,14 +49,10 @@
             </div>
             <hr>
       </main>
+			<footer>
+				<center>KUAD クロステックデザインコース 2019</center>
+			</footer>
+			</div>
+			</body>
 
-      <footer>
-        <p>&copy; wangguanlin</p>
-      </footer>
-    </div>
-    <div class="subject_page">
-
-    </div>
-  </body>
-
-</html>
+			</html>
