--- a/pets.html
+++ b/pets.html
@@ -22,7 +22,7 @@
 					</div>
 					<section id="banner">
 						<header>
-							<h2>はじめまして <strong>シンです</strong>.</h2>
+							<h2>ここは小動物の <strong>王国</strong>.</h2>
 
 						</header>
 					</section>
