--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 <title>Shinnの学習進捗ページ by:DENG ZHEN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
 
-			<!-- Header -->
+			
 				<div id="header">
 
 					<!-- Inner -->
@@ -32,7 +31,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="swnwb1.html">Swnwb1</a>
-								<li><a href="Swnwb2.html">Swnwb2</a></li>
+								<li><a href="swnwb2.html">Swnwb2</a></li>
 								<li><a href="cv.html">CV</a></li>
 								<li><a href="pets.html">Pets</a></li>
 							</ul>
