--- a/swnwb1.html
+++ b/swnwb1.html
@@ -23,17 +23,29 @@
 
 				</div>
 
-        <p> </p>
-        <p> </p>
-        <p> </p>
+<section id="banner">
+            <header>
+              <h2>はじめまして <strong>シンです</strong></h2>
 
       <main>
         <h1>ソフトウェアネットワーク演習1</h1>
         <div class="session">
           <h2>Session:1</h2>
           <h3>課題：1</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/AufydOsiD6M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+					<footer>
+					  	<ul>
+					        <img src="./assets/images/ps.png" />
+									<li><a href="index.html"><center>photoshop<center/></li>
+									</ul>
+					</footer>
+
+<footer>
+									<img src="./assets/images/ai.png"/>
+								  <li><a href="cv.html"><center>Illustrator<center/></li>
+
+							</footer>
+
+
 
         <div class="session">
           <h2>Session:2</h2>
@@ -45,7 +57,7 @@
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <center>KUAD クロステックデザインコース 2019</center>
       </footer>
     </div>
   </body>
