--- a/swnwb1.html
+++ b/swnwb1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
 
@@ -21,9 +20,8 @@
 							</ul>
 						</nav>
 
-				</div>
-
-<section id="banner">
+          </div>
+          <section id="banner">
             <header>
               <h2>はじめまして <strong>シンです</strong></h2>
 
@@ -35,13 +33,13 @@
 					<footer>
 					  	<ul>
 					        <img src="./assets/images/ps.png" />
-									<li><a href="index.html"><center>photoshop<center/></li>
+									<li><a href="ps.html"><center>photoshop<center/></li>
 									</ul>
 					</footer>
 
 <footer>
 									<img src="./assets/images/ai.png"/>
-								  <li><a href="cv.html"><center>Illustrator<center/></li>
+								  <li><a href="#"><center>Illustrator<center/></li>
 
 							</footer>
 
