--- a/swnwb1.html
+++ b/swnwb1.html
@@ -34,7 +34,7 @@
 					<footer>
 					  	<ul>
 					        <img src="./assets/images/ps.png" />
-									<li><a href="index.html"><center>photoshop<center/></li>
+									<li><a href="ps.html"><center>photoshop<center/></li>
 									</ul>
 					</footer>
 
