--- a/ps.html
+++ b/ps.html
@@ -63,6 +63,15 @@
 				<br> </br>
 				  <center><h1>完</h1>  </center>
 					<br> </br>
+					<footer>
+						<center><a href="swnwb1.html" class="button scrolly">Back</a><center>
+					</footer>
+					</section>
+					<div class="content dark style2">
+					<div class="container">
+						<div class="row">
+							<div class="4u 12u(narrow)">
+			
 
 
 
