--- a/swnwb1.html
+++ b/swnwb1.html
@@ -40,7 +40,7 @@
 
 <footer>
 									<img src="./assets/images/ai.png"/>
-								  <a href="cv.html"><center>Illustrator<center/>
+								  <center>Illustrator<center/>
 
 							</footer>
 
