--- a/swnwb1.html
+++ b/swnwb1.html
@@ -32,17 +32,19 @@
           <h2>Session:1</h2>
           <h3>課題：1</h3>
 		<footer>
+		 <img src="./assets/images/ai.png"/>
+	   <center>Illustrator<center/>	
 		<ul>
-              <img src="./assets/images/ps.png" />
+              <img src="./assets/images/ps.png"/>
 			<li><a href="ps.html"><center>photoshop<center/></li>
 									</ul>
 					</footer>
 
-   <footer>
+  
 	   <img src="./assets/images/ai.png"/>
 	   <center>Illustrator<center/>
 
-							</footer>
+							
 
 
 
